[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darkbird = "6.2.4"
rand = "0.8.5"
rocket = "0.5.0"
rocket_okapi = { version = "0.8.0", features = ["swagger", "schemars"] }
serde = "1.0.203"
tokio = "1.37.0"
tokio-util = {version = "0.7.10", features = ["compat"]}
